------------
v3.0.0alpha9
------------




------------
v3.0.0alpha8
------------

[rla] Release for PHP 8.
|+


------------
v3.0.0alpha7
------------

[rla] Enable for PHP 8.
|+


------------
v3.0.0alpha6
------------

[rla] Upgraded to conform PSR-11 2.0.1 interfaces
|+


------------
v3.0.0alpha5
------------

[rla] Added PSR-11 compatible interfaces.
|+


------------
v3.0.0alpha4
------------

|+

------------
v3.0.0alpha3
------------

|+

------------
v3.0.0alpha2
------------

|+

------------
v3.0.0alpha1
------------


------
v2.0.5
------

[jan] Mark PHP 7 as supported.


------
v2.0.4
------

[jan] Improve PSR-2 compatibility.


------
v2.0.3
------

[mms] Cache creation of Reflection objects when binding.


------
v2.0.2
------

[jan] Re-throw ReflectionExceptions as Horde_Injector_Exceptions.


------
v2.0.1
------

[mms] Use new Horde_Test layout.


------
v2.0.0
------

First stable release for Horde 5.


-----------
v2.0.0beta1
-----------

First beta release for Horde 5.


------------
v2.0.0alpha1
------------

First alpha release for Horde 5.


------
v1.0.1
------

[jan] Fix tests to work with PHPUnit 3.6.


------
v1.0.0
------

First stable release for Horde 4.


---------
v1.0.0RC2
---------

Second release candidate for Horde 4.


---------
v1.0.0RC1
---------

First release candidate for Horde 4.


-----------
v1.0.0beta1
-----------

First beta release for Horde 4.


------------
v1.0.0alpha1
------------

First alpha release for Horde 4.
Add Horde_Injector#hasInstance().
Initial release, contributed by Blue State Digital